# PhoneBoothV2

./: README.md
phonebooth V2/: README.md  pyproject.toml  requirements.txt
phonebooth V2/app/: main.py
phonebooth V2/app/api/: deps.py
phonebooth V2/app/api/routes/: __init__.py  auth.py  channels.py  messages.py  servers.py
phonebooth V2/app/core/: config.py  security.py
phonebooth V2/app/db/: init_db.py  session.py
phonebooth V2/app/models/: __init__.py  channel.py  enums.py  message.py  server.py  user.py
phonebooth V2/app/schemas/: channel.py  common.py  message.py  server.py  ws.py
phonebooth V2/app/services/: message_service.py
phonebooth V2/app/websocket/: gateway.py  manager.py
phonebooth V2/bot/: config.py  main.py  repository.py
phonebooth V2/supabase/: schema.sql
